--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="root">
-        
-    </div>
-
-
+    <div id="root"></div>
     <script type="module" src="./src/App.js"></script>
 </body>
 </html>
